<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_new_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:gravity="center"
                android:text="@string/tv_overview"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_18"
                android:background="@drawable/layout_background_shape_small"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/tv_date"
                android:textSize="@dimen/text_size_18" />



            <TextView
                android:id="@+id/tv_date_output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_centerVertical="true"
                android:textColor="@color/light_green"
                android:textSize="@dimen/text_size_16"
                android:text=""/>

            <Button
                android:id="@+id/btn_changeDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_centerVertical="true"
                android:textColor="@color/light_green"
                android:textSize="@dimen/text_size_16"
                android:text="@string/btn_change_date"
                android:background="@drawable/btn_background"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_project"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_weight="2"
                android:gravity="left"
                android:text="@string/tv_project"
                android:textSize="@dimen/text_size_18" />

            <EditText
                android:id="@+id/ed_project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_weight="2"
                android:background="@drawable/edit_text_background_shape"
                android:gravity="center_horizontal|center_vertical|right"
                android:singleLine="true" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_weight="2"
                android:gravity="left"
                android:text="@string/tv_description"
                android:textSize="@dimen/text_size_18" />

            <EditText
                android:id="@+id/ed_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_weight="2"
                android:background="@drawable/edit_text_background_shape"
                android:gravity="center_horizontal|center_vertical|right"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_weight="2"
                android:gravity="left"
                android:text="@string/tv_time"
                android:textSize="@dimen/text_size_18" />

            <EditText
                android:id="@+id/ed_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_weight="2"
                android:background="@drawable/edit_text_background_shape"
                android:gravity="center_horizontal|center_vertical|right"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_export"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:text="@string/btn_export"
                android:textSize="@dimen/text_size_16" />

            <Button
                android:id="@+id/btn_view_pdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:text="@string/btn_view_pdf"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
